--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Search any Image</h1>
-<img th:src="@{https://tinyurl.com/46ehkswp}" alt="Company Logo">
+<img src="https://tinyurl.com/48tmevrw" alt="" srcset="">
 
 <!-- College Name -->
 <h2 class="marquee">Bill Gates College, Dharashiv</h2>
