--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="https://tinyurl.com/48tmevrw" alt="" srcset="">
 
 <!-- College Name -->
-<h2 class="marquee">Bill Gates College Dharashiv</h2>
+<h2 class="marquee">Bill Gates College Dharashiv .</h2>
 
 <!-- कंफेटी एनिमेशन -->
 <canvas id="confetti-canvas"></canvas>
